--- a/public/frontend/gallery.html
+++ b/public/frontend/gallery.html
@@ -91,7 +91,7 @@
                                     <i class="fab fa-opencart"></i> 20% off Entire Purchase Promo code: offT30
                                 </li>
                                 <li>
-                                    <i class="fab fa-opencart"></i> Off 50%! Shop Now 
+                                    <i class="fab fa-opencart"></i> Off 50%! Shop Now
                                 </li>
                             </ul>
                         </div>
@@ -267,8 +267,10 @@
                                     <li><a href="#" data-toggle="tooltip" data-placement="right" title="Compare"><i class="fas fa-sync-alt"></i></a></li>
                                     <li><a href="#" data-toggle="tooltip" data-placement="right" title="Add to Wishlist"><i class="far fa-heart"></i></a></li>
                                 </ul>
+                                <a class="cart" href="#">Add to Cart</a>
+
                             </div>
-                        </div>                        
+                        </div>
                     </div>
                 </div>
 
@@ -281,7 +283,9 @@
                                     <li><a href="#" data-toggle="tooltip" data-placement="right" title="View"><i class="fas fa-eye"></i></a></li>
                                     <li><a href="#" data-toggle="tooltip" data-placement="right" title="Compare"><i class="fas fa-sync-alt"></i></a></li>
                                     <li><a href="#" data-toggle="tooltip" data-placement="right" title="Add to Wishlist"><i class="far fa-heart"></i></a></li>
-                                </ul>                                
+                                </ul>
+                                <a class="cart" href="#">Add to Cart</a>
+
                             </div>
                         </div>
                     </div>
@@ -289,16 +293,16 @@
 
                 <div class="col-lg-3 col-md-6 special-grid fruits">
                     <div class="products-single fix">
-                        <div class="box-img-hover">                            
+                        <div class="box-img-hover">
                             <img src="images/gallery-img-04.jpg" class="img-fluid" alt="Image">
                             <div class="mask-icon">
                                 <ul>
                                     <li><a href="#" data-toggle="tooltip" data-placement="right" title="View"><i class="fas fa-eye"></i></a></li>
                                     <li><a href="#" data-toggle="tooltip" data-placement="right" title="Compare"><i class="fas fa-sync-alt"></i></a></li>
                                     <li><a href="#" data-toggle="tooltip" data-placement="right" title="Add to Wishlist"><i class="far fa-heart"></i></a></li>
-                                </ul>                                
+                                </ul>
                             </div>
-                        </div>                        
+                        </div>
                     </div>
                 </div>
 				<div class="col-lg-3 col-md-6 special-grid bulbs">
@@ -318,7 +322,7 @@
 
                 <div class="col-lg-3 col-md-6 special-grid fruits">
                     <div class="products-single fix">
-                        <div class="box-img-hover">                            
+                        <div class="box-img-hover">
                             <img src="images/gallery-img-06.jpg" class="img-fluid" alt="Image">
                             <div class="mask-icon">
                                 <ul>
@@ -348,7 +352,7 @@
 
                 <div class="col-lg-3 col-md-6 special-grid root-and-tuberous">
                     <div class="products-single fix">
-                        <div class="box-img-hover">                            
+                        <div class="box-img-hover">
                             <img src="images/gallery-img-08.jpg" class="img-fluid" alt="Image">
                             <div class="mask-icon">
                                 <ul>
@@ -357,13 +361,13 @@
                                     <li><a href="#" data-toggle="tooltip" data-placement="right" title="Add to Wishlist"><i class="far fa-heart"></i></a></li>
                                 </ul>
                             </div>
-                        </div>                        
+                        </div>
                     </div>
                 </div>
-				
+
 				<div class="col-lg-3 col-md-6 special-grid root-and-tuberous">
                     <div class="products-single fix">
-                        <div class="box-img-hover">                            
+                        <div class="box-img-hover">
                             <img src="images/gallery-img-09.jpg" class="img-fluid" alt="Image">
                             <div class="mask-icon">
                                 <ul>
@@ -393,14 +397,14 @@
 
                 <div class="col-lg-3 col-md-6 special-grid root-and-tuberous">
                     <div class="products-single fix">
-                        <div class="box-img-hover">                           
+                        <div class="box-img-hover">
                             <img src="images/gallery-img-11.jpg" class="img-fluid" alt="Image">
                             <div class="mask-icon">
                                 <ul>
                                     <li><a href="#" data-toggle="tooltip" data-placement="right" title="View"><i class="fas fa-eye"></i></a></li>
                                     <li><a href="#" data-toggle="tooltip" data-placement="right" title="Compare"><i class="fas fa-sync-alt"></i></a></li>
                                     <li><a href="#" data-toggle="tooltip" data-placement="right" title="Add to Wishlist"><i class="far fa-heart"></i></a></li>
-                                </ul>                                
+                                </ul>
                             </div>
                         </div>
                     </div>
@@ -417,7 +421,7 @@
                                     <li><a href="#" data-toggle="tooltip" data-placement="right" title="Add to Wishlist"><i class="far fa-heart"></i></a></li>
                                 </ul>
                             </div>
-                        </div>                        
+                        </div>
                     </div>
                 </div>
             </div>
@@ -559,8 +563,8 @@
                     <div class="col-lg-4 col-md-12 col-sm-12">
                         <div class="footer-widget">
                             <h4>About Freshshop</h4>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p> 
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p> 							
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </p>
                         </div>
                     </div>
                     <div class="col-lg-4 col-md-12 col-sm-12">
